Update social share preview to Prime Skool image

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <meta property="og:title" content="Prime Skool | E-Ticaret Eğitimi & Marka Stratejileri" />
     <meta property="og:description" content="Güçlü stratejiler kur. Amazon ve Shopify'da marka ve sistem kurmayı öğren." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.primeskool.com" />
+    <meta property="og:image" content="https://www.primeskool.com/og-image.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimeSkool" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Prime Skool | E-Ticaret Eğitimi & Marka Stratejileri" />
+    <meta name="twitter:description" content="Güçlü stratejiler kur. Amazon ve Shopify'da marka ve sistem kurmayı öğren." />
+    <meta name="twitter:image" content="https://www.primeskool.com/og-image.webp" />
   </head>
 
   <body>
