--- a/public/hizmet-sartlari/index.html
+++ b/public/hizmet-sartlari/index.html
@@ -26,31 +26,88 @@
   </head>
   <body>
     <h1>Hizmet Şartları</h1>
-    <p><strong>Son güncelleme:</strong> 2024</p>
-    <p>Bu Hizmet Şartları, PrimeSkool (“platform”, “biz”) tarafından sunulan eğitim içerikleri, dijital hizmetler ve bunlara bağlı iletişim araçlarının kullanımına ilişkin koşulları düzenler. PrimeSkool platformunu kullanan herkes bu şartları kabul etmiş sayılır.</p>
+    <p>Son güncelleme: [tarih ekleyebilirsin]</p>
+    <p>
+      Bu Hizmet Şartları, PrimeSkool (“platform”, “biz”) tarafından sunulan eğitim içerikleri, dijital hizmetler ve bunlara bağlı iletişim araçlarının kullanımına ilişkin koşulları düzenler.
+      PrimeSkool platformunu kullanan herkes bu şartları kabul etmiş sayılır.
+    </p>
     <h3>1. Hizmetin Kapsamı</h3>
-    <p>PrimeSkool; çevrim içi eğitim içerikleri, dijital materyaller, bilgilendirme hizmetleri ve eğitim süreçlerini destekleyici iletişim kanallarından oluşan bir eğitim platformudur. Platform kapsamında, kullanıcılarla iletişim kurmak amacıyla WhatsApp gibi mesajlaşma servisleri kullanılabilir.</p>
+    <p>
+      PrimeSkool; çevrim içi eğitim içerikleri, dijital materyaller, bilgilendirme hizmetleri ve eğitim süreçlerini destekleyici iletişim kanallarından oluşan bir eğitim platformudur.
+      Platform kapsamında, kullanıcılarla iletişim kurmak amacıyla WhatsApp gibi mesajlaşma servisleri kullanılabilir.
+    </p>
     <h3>2. Kullanıcı Yükümlülükleri</h3>
-    <p>Kullanıcılar; sağladıkları bilgilerin doğru ve güncel olduğunu, içerikleri kişisel kullanım amacıyla kullandıklarını, platformu mevzuata ve genel ahlak kurallarına uygun kullandıklarını kabul eder.</p>
+    <p>
+      Kullanıcılar:
+      <br />
+      Platforma sağladıkları bilgilerin doğru ve güncel olduğunu
+      <br />
+      Eğitim içeriklerini yalnızca kişisel kullanım amacıyla kullandıklarını
+      <br />
+      Platformu yürürlükteki mevzuata ve genel ahlak kurallarına uygun şekilde kullandıklarını
+      <br />
+      kabul eder.
+    </p>
     <h3>3. İletişim ve Bildirimler</h3>
-    <p>PrimeSkool eğitim bilgilendirmeleri, hatırlatma ve duyurular, kullanıcı taleplerine yanıt amaçlarıyla WhatsApp veya benzeri kanallardan iletişim kurabilir; ticari spam amacı taşımaz.</p>
+    <p>
+      PrimeSkool, eğitim süreçleri kapsamında:
+      <br />
+      Eğitim bilgilendirmeleri
+      <br />
+      Hatırlatma ve duyurular
+      <br />
+      Kullanıcı taleplerine yanıt
+      <br />
+      amaçlarıyla kullanıcılarla WhatsApp veya benzeri iletişim kanalları üzerinden iletişime geçebilir.
+      Bu iletişimler ticari spam amacı taşımaz.
+    </p>
     <h3>4. Yasaklı Kullanımlar</h3>
-    <p>Platformu hukuka aykırı kullanmak, içerikleri izinsiz çoğaltmak/paylaşmak, altyapıyı kötüye kullanmak yasaktır; ihlalde erişim sınırlandırılabilir.</p>
+    <p>
+      Kullanıcılar:
+      <br />
+      Platformu hukuka aykırı şekilde kullanamaz
+      <br />
+      Eğitim içeriklerini izinsiz çoğaltamaz veya paylaşamaz
+      <br />
+      Platform altyapısını kötüye kullanamaz
+    </p>
+    <p>Bu tür durumlarda PrimeSkool, gerekli gördüğü tedbirleri alma hakkını saklı tutar.</p>
     <h3>5. Üçüncü Taraf Hizmetler</h3>
-    <p>WhatsApp (Meta) gibi servislerin kendi kullanım şartları ve gizlilik politikaları ayrıca geçerlidir.</p>
+    <p>
+      PrimeSkool, WhatsApp (Meta) gibi üçüncü taraf servislerden faydalanabilir.
+      Bu servislerin kendi kullanım şartları ve gizlilik politikaları ayrıca geçerlidir.
+    </p>
     <h3>6. Hizmetin Değiştirilmesi</h3>
-    <p>PrimeSkool, sunulan içerikleri ve özellikleri önceden bildirim yapmadan değiştirme hakkını saklı tutar.</p>
+    <p>
+      PrimeSkool, sunulan eğitim içeriklerini, platform özelliklerini veya iletişim yöntemlerini önceden bildirimde bulunmaksızın değiştirme hakkını saklı tutar.
+    </p>
     <h3>7. Sorumluluğun Sınırlandırılması</h3>
-    <p>PrimeSkool, eğitim içeriklerinin kesin sonuç garantisi verdiğini taahhüt etmez; üçüncü taraf servis kaynaklı teknik aksaklıklardan sorumlu tutulamaz.</p>
+    <p>
+      PrimeSkool:
+      <br />
+      Eğitim içeriklerinin kesin sonuç garantisi verdiğini taahhüt etmez
+      <br />
+      Üçüncü taraf servislerden kaynaklanan teknik aksaklıklardan sorumlu tutulamaz
+    </p>
     <h3>8. Fikri Mülkiyet Hakları</h3>
-    <p>Tüm eğitim içerikleri, videolar, metinler ve dijital materyaller PrimeSkool’a aittir; izinsiz kullanılamaz, çoğaltılamaz, dağıtılamaz.</p>
+    <p>
+      PrimeSkool’a ait tüm eğitim içerikleri, videolar, metinler ve dijital materyaller fikri mülkiyet kapsamındadır.
+      İzinsiz kullanılamaz, çoğaltılamaz veya dağıtılamaz.
+    </p>
     <h3>9. Hizmetin Sonlandırılması</h3>
-    <p>Kullanıcılar platformu diledikleri zaman bırakabilir; şartlara aykırı kullanım halinde erişim sınırlandırılabilir.</p>
+    <p>
+      Kullanıcılar, platformu kullanmayı diledikleri zaman bırakabilir.
+      PrimeSkool, bu şartlara aykırı kullanım halinde erişimi sınırlandırabilir.
+    </p>
     <h3>10. Uygulanacak Hukuk</h3>
-    <p>Türkiye Cumhuriyeti hukuku uygulanır.</p>
+    <p>Bu hizmet şartları, Türkiye Cumhuriyeti hukuku çerçevesinde uygulanır.</p>
     <h3>11. Değişiklikler</h3>
-    <p>Güncellemeler yayımlandığı tarihte yürürlüğe girer.</p>
+    <p>Bu hizmet şartları gerektiğinde güncellenebilir. Güncel versiyon web sitesi üzerinden yayımlandığı tarihte yürürlüğe girer.</p>
     <h3>12. İletişim</h3>
-    <p>Sorular için: <a href="mailto:support@primeskool.com">support@primeskool.com</a></p>
+    <p>
+      Bu hizmet şartları ile ilgili sorular için:
+      <br />
+      📧 <a href="mailto:support@primeskool.com">support@primeskool.com</a>
+    </p>
   </body>
 </html>
